# op-plugin

./: .gitignore  DEPLOY.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/: __init__.py
plugins/coder-explore/.claude-plugin/: plugin.json
plugins/coder-flow-plugin/.claude-plugin/: plugin.json
plugins/coder-flow/.claude-plugin/: plugin.json
plugins/coder-plugin/.claude-plugin/: plugin.json
plugins/coder-plugin/agents/: designer.md  developer.md  frontend-html.md
plugins/coder-web-plugin/.claude-plugin/: plugin.json
plugins/coder-web-plugin/agents/: frontend-ant.md  frontend-h5.md  frontend-html.md  frontend-react.md  frontend-vue.md
plugins/coder-web-plugin/skills/web_build/: SKILL.md
plugins/coder-web/.claude-plugin/: plugin.json
plugins/coder-web/agents/: frontend-react.md
plugins/mcp-plugin/.claude-plugin/: plugin.json
plugins/op-plugin/.claude-plugin/: plugin.json
plugins/op-plugin/agents/: op-button.md  op-connector.md  op-event.md  op-statistics.md  op-workflow.md  op_connector.md  op_event.md  op_statistics.md  op_workflow.md
plugins/op-plugin/skills/op_db/: COMMON.md  SKILL.md
plugins/op-plugin/skills/op_db_e_report/: SKILL.md
plugins/op-plugin/skills/op_db_metadata/: SKILL.md
plugins/op-plugin/skills/op_db_openapi/: SKILL.md
plugins/op-plugin/skills/op_db_user/: SKILL.md
plugins/video-analyst-plugin/.claude-plugin/: plugin.json
plugins/video-analyst-plugin/agents/: video-analyst.md
plugins/video-analyst-plugin/skills/video_analysis/: SKILL.md
