[project]
name = "siti-claude-marketplace"
version = "0.1.0"
description = "Claude Code plugins marketplace"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugins"]

[tool.hatch.build.targets.wheel.sources]
"plugins" = "siti_claude_marketplace"

